--- a/cv.tex
+++ b/cv.tex
@@ -173,13 +173,6 @@
 }
 
 %----------------------------------------------------------------------------------------
-%   INTERESTS
-%----------------------------------------------------------------------------------------
-\section{Interests}
-
-Programming Languages, Networks and Systems, Security, Web-Development, Natural Language Processing
-
-%----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \section{Education}
@@ -244,19 +237,9 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     }
 
 %----------------------------------------------------------------------------------------
-%	SCHOLARSHIPS AND CONFERENCES
-%----------------------------------------------------------------------------------------
-\section{Scholarships and Conferences}
-
-\itemlist {
-    \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
-    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
-}
-
-%----------------------------------------------------------------------------------------
 %   SCHOLASTIC ACHIEVEMENTS
 %----------------------------------------------------------------------------------------
-\section{Scholastic Achievements}
+\section{Scholastic Achievements, Scholarships and Conferences}
 
 \itemlist {
     \textsc{2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
@@ -269,204 +252,13 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
     \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
+    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
     \textsc{2009, 2005}  & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
                             2$^{nd}$ to 12$^{th}$ grade. \\
 }
-
-%----------------------------------------------------------------------------------------
-%   SKILL SET
-%----------------------------------------------------------------------------------------
-\section{Skill Set}
-
-\itemlist {
-    \textsc{Languages} %
-            & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
-              \textbf{C\#} (Efficient), \textbf{C} (Proficient)\\
-    \textsc{Web Dev} %
-            & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
-    \textsc{Tools} %
-            & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Prezi} (Proficient),
-              \textbf{Vim} (Expert), \textbf{LaTeX} (Proficient)\\
-}
-
-%----------------------------------------------------------------------------------------
-%  COURSE PROJECTS
-%----------------------------------------------------------------------------------------
-% \let\thefootnote\relax\footnote{Monsoon semester: July to November}
-% \let\thefootnote\relax\footnote{Winter Semester: January to April}
-\section{Course Projects}
-
-\cproject
-    {Monsoon 2014-2015}
-    {Multi Factor Authentication in OpenVPN}
-    {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
-    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}{ \footnotesize{[Project Wiki]}} }
-    {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item One of the eleven projects to be selected as a part of Mozilla's Winter of Security Initiative 2014.
-          \item The objective of the project is to implement true arbitrary multi-factor authentication support in
-              OpenVPN; and to implement session-support for the additional factors.
-      \end{itemize}
-    }
-
-\scproject
-    {Winter 2013-2014}
-    {JavaScript to MIPS Compiler}
-    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/javascript-compiler} { \footnotesize{[Repository]}} }
-    {
-          Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-          functions, anonymous functions, static types, type annotations, recursion and nested functions.
-    }
-
-\cproject
-    {Winter 2013-2014}
-    {Hindi author attribution}
-    {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
-    { \href{https://github.com/srijanshetty/author-attribution}{ \footnotesize{[Repository]}} }
-    {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
-             Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-         \item Selected as one of the top seven projects at the end of the term.
-         \item Generated a Hindi literature corpus consisting of works by Rabindranath Tagore,
-             Vibhuti Narayan, Premchand, Sarat Chandra Chattopadhyay and Dhamarvir Bharati.
-         \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
-             F-scores in the range of 90-97\% for each author.
-         \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function
-             and achieved an F-score of 90--95\% for each author.
-         \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
-             collocations; there was no appreciable difference in the results with the F-scores increasing only
-             marginally.
-     \end{itemize}
-    }
-
-\cproject
-    {Monsoon 2013-2014}
-    {P2P File Sharing and Streaming and IP Spoofing}
-    {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    { \href{https://github.com/srijanshetty/nodesock}{ \footnotesize{[Repository]} } }
-    {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-                data over any LAN.
-            \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
-                Smurfing and SYN Flooding.
-        \end{itemize}
-    }
-
-\cproject
-    {Monsoon 2013-2014}
-    {NachOS}
-    {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-    {}
-    {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
-             Join, Yield, Sleep and Exit.
-             \href{https://github.com/srijanshetty/nachos-syscalls/}{[Repository]}
-         \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
-             Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-             \href{https://github.com/srijanshetty/nachos-scheduling}{[Repository]}
-         \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
-             Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-             \href{https://github.com/srijanshetty/nachos-final/}{[Repository]}
-      \end{itemize}
-    }
-
-\cproject
-    {Monsoon 2013-2014}
-    {Prolog Shortest Paths and Erlang Traffic Server}
-    {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
-    {}
-    {
-       \begin{itemize}[leftmargin=0.5cm]
-           \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
-           \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
-       \end{itemize}
-    }
-
-\cproject
-    {Winter 2012-2013}
-    {8-bit General Purpose Computer on a FPGA}
-    {\textsc{Computer Organization}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/220\_y11} {\footnotesize{[Repository]}} }
-    {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item Designed and programmed a simple Instruction set Architecture (ISA) for a 8-bit General Purpose Computer with a load-store
-              architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.
-          \item Demonstrated recursion, looping and conditionals on the Computer by using a simple assembly language.
-      \end{itemize}
-    }
-
-\scproject
-    {Winter 2012-2013}
-    {Conference Dates Web Crawler}
-    {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} {\footnotesize{ [Repository]}} }
-    {
-           Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
-           urllib.
-    }
-
-%----------------------------------------------------------------------------------------
-%  INDEPENDENT PROJECTS
-%----------------------------------------------------------------------------------------
-\section{Independent Projects}
-
-\siproject
-    {\href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{[Documentation]} }
-    {GNU/Linux Exploration, Programming Club, IIT Kanpur}
-    {
-        Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-      process management, memory management, shell interface etc to serve as a reference for the
-      Student Community.
-    }
-
-\siproject
-    {\href{https://navya.github.io/oars}{[Website]}}
-    {OARS}
-    { Scraped the institute academic records to create a database of all courses offered by the institute to create an AngularJS based course search over the existing legacy course search.  }
-
-\siproject
-    {\href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}}
-    {ShuffleRun}
-    { Pitched ShuffleRun, a music player which selects tracks on the basis of the user's running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}. }
-
-\siproject
-    {\href{http://gyph2.herokuapp.com/} {[Website]}}
-    {Get Your Personal Homepage (GYPH)}
-    {Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website editor. }
-
-\projectlist
-    {Projects on Github}
-    {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item \textbf{DS}: implementation of certain algorithms and data structures
-             \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
-         \item \textbf{Notes}: notes on computing and social sciences.
-             \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
-         \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-             \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
-         \item \textbf{Bash Scripts}: handy configurations and shortcuts for ZSH
-             \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
-     \end{itemize}
-    }
-
-\projectlist
-    {Web Development}
-    {
-     \begin{itemize}[leftmargin=0.5cm]
-         \item \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
-             \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
-         \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
-             \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
-         \item \textbf{Junoon '14}: Eastern Band Competition, Antaragni '14.
-             \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}
-     \end{itemize}
-    }
 
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
@@ -497,10 +289,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                     \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other
                         non-monetary incentives to the outstanding cultural performers in Antaragni under the banner
                         of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
+                    \item Coordinated the conduction of fifty competitions and nine major events with a three tier team comprising of 50 coordinators, 200 secretaries and 1000 volunteers.
                     \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
-                        thousand volunteers.
-                        held in Antaragni.
                \end{itemize}
           }
 
@@ -510,7 +300,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                \begin{itemize}[leftmargin=0.5cm]
                    \item Chalked out the logistics of hospitality and accommodation of \textbf{1500 participants} with four other coordinators.
                    \item Managed a team of 40 secretaries and 80 volunteers, over a span of 8 months and ensured a flawless conduction of the festival.
-                   \item Handled security arrangements during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
                \end{itemize}
           }
 
@@ -520,8 +309,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                \begin{itemize}[leftmargin=0.5cm]
                    \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with
                        suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
-                   \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
-                   \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
+                   \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen} and contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
           }
 
@@ -530,9 +318,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \skill {2012 -- 2013}
        {Senator, Students' Senate, IITK Y11 batch.}
-
-\skill {2010 -- 2011}
-       {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
