--- a/cv.tex
+++ b/cv.tex
@@ -491,16 +491,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Head, Major Events and Competitions, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad,
-                        Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow,
-                        Kolkata, and Kanpur.
-                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other
-                        non-monetary incentives to the outstanding cultural performers in Antaragni under the banner
-                        of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
+                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
+                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other non-monetary incentives to the outstanding cultural performers in Antaragni under the banner of \textbf{Dream On} campaign.
+                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over thousand volunteers.
                     \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
-                        thousand volunteers.
-                        held in Antaragni.
                \end{itemize}
           }
 
@@ -518,8 +512,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with
-                       suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
+                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
                    \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
                    \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
