--- a/cv.tex
+++ b/cv.tex
@@ -157,8 +157,8 @@
 %----------------------------------------------------------------------------------------
 
 {
-    \begin{tabular}{rl}
-        \multirow{3}{0.73\linewidth}{
+    \begin{tabular}{rp{4.5cm}l}
+        \multirow{3}{0.55\linewidth}{
             {
                 \addfontfeature{LetterSpace=20.0}\fontsize{24}{24}\selectfont\scshape
                 Srijan R. Shetty
@@ -166,9 +166,8 @@
             \hspace{0.15cm} \emph{Department of Computer Science and Engineering}
         }
 
-        & {\Large\Mobilefone} +(91) 9005900383 \\
-        & {\Large\Letter} \href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}\\
-        & {\github} \href{https://github.com/srijanshetty}{https://github.com/srijanshetty}\\
+        & {\Large\Mobilefone} \footnotesize{+(91) 9005900383} & {\Large\Letter} \footnotesize{\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
+        & {\github} \footnotesize{\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}\\
     \end{tabular}
 }
 
