--- a/cv.tex
+++ b/cv.tex
@@ -176,7 +176,7 @@
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabular}{>{\raggedleft}p{1.5cm}p{15.5cm}r}
+\begin{tabular}{>{\raggedleft}p{1.5cm}p{16.3cm}r}
 
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},
                        \textbf{Indian Institute of Technology}, Kanpur
@@ -206,9 +206,9 @@
       {
          \begin{itemize}[leftmargin=0.5cm]
              \item Analysed the implementations of different distributed systems and databases architectures like
-                 \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
+                 \textbf{Google MapReduce}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
                  \textbf{Amazon DynamoDB}, \textbf{Apache Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop},
-                 \textbf{Apache Storm}, \textbf{Microsoft Dryad}, and \textbf{Microsoft DryadLINQ}
+                 \textbf{Apache Storm}, and \textbf{Microsoft DryadLINQ}
                  to understand the design decisions involved.
              \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline
                  processing of messages in CScale to preserve processing order of partially ordered messages.  Performed \textbf{performance testing} and \textbf{failure testing} of the existing infrastructure.
@@ -236,27 +236,25 @@
 \section{Scholastic Achievements, Scholarships and Conferences}
 
 \itemlist {
-    \textsc{2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                            \textbf{Computer, Internet and Network Security};
+    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
+                            \textbf{Systems and Network Security};
                             \textbf{Computer Networks};
                             \textbf{Computer Organization};
                             \textbf{Logic for Computer Science};
                             \textbf{Fundamentals of Computing};
-                            \textbf{Introduction to Philosophy} \\
-    \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
-    \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
-    \textsc{Dec 2009}    & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
-    \textsc{2009, 2005}  & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+                            \textbf{Introduction to Philosophy}. \\
+    \textsc{-}                  & Awarded \textbf{Academic Excellence} for an outstanding academic record
+                            consistently for the past two years.\\
+    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
+    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
+    \textsc{\small Dec 2009}    & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
 }
 
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
 %----------------------------------------------------------------------------------------
 
-\section {Social, Leadership and Artistic Skills}
+\section {Leadership and Artistic Skills}
 
 \skill {\href{srijanshetty.quora.com} {[Blog]}}
        {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
@@ -265,9 +263,7 @@
           {Hacker, Navya, FOSS Group IIT Kanpur}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Promoted the FOSS initiative in campus by organizing student lectures and meet-ups.
-                   \item Built student-centric applications like Course Search and Student Search, to circumvent
-                       their legacy institute counterparts.
+                   \item Promoted the FOSS initiative by organizing student lectures and meet-ups.  Built student-centric applications like Course Search and Student Search.
                \end{itemize}
           }
 
@@ -275,16 +271,16 @@
           {Head, Major Events and Competitions, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad,
-                        Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow,
-                        Kolkata, and Kanpur.
-                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other
+                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for
+                        6 competitions were held in eleven cities.
+                    \item Negotiated with leading academies of performing arts to provide mentorships, and other
                         non-monetary incentives to the outstanding cultural performers in Antaragni under the banner
                         of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of fifty competitions and nine major events with a three tier team
-                        comprising of 50 coordinators, 200 secretaries and 1000 volunteers.
-                    \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's
-                        arsenal of competitions.
+                    \item Coordinated the conduction of over fifty competitions and nine major events with a three tier team
+                        comprising of 50 coordinators, 200 secretaries and 1000 volunteers.  Also introduced
+                        Mr. \& Ms. Fresher's and Chreo Night to Antaragni's arsenal of competitions.
+                    \item Organized a blood donation camp and mobilized information about road safety in the eleven cities
+                        as a part of Antaragni's road safety campaign - Zara Sambhal Key.
                \end{itemize}
           }
 
@@ -293,7 +289,7 @@
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Chalked out the logistics of hospitality and accommodation of \textbf{1500 participants}
-                       with four other coordinators.
+                       with four fellow coordinators.
                    \item Managed a team of 40 secretaries and 80 volunteers, over a span of 8 months and ensured
                        a flawless conduction of the festival.
                \end{itemize}
@@ -303,8 +299,6 @@
           {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with
-                       suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
                    \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen} and
                        contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
@@ -337,36 +331,17 @@
 
 \lproject {2013 -- 2014}
           {Tutor, English Proficiency Programme}
-          {Professor Bhaskar Das Gupta}
+          {}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Worked as a English tutor in the pilot English Proficiency Programme to help
-                       under-privileged students obtain a functional knowlege of English; and helped in the
-                       conduction of second phase of the project aimed at school teachers in nearby schools.
+                   \item Worked as a English tutor in the pilot English Proficiency Programme lead by Professor
+                       Bhaskar Das Gupta to help under-privileged students obtain a functional knowlege of English.
                \end{itemize}
           }
 
-\lproject {2012 -- 2013}
-          {Academic Mentor, Fundamentals of Computing}
-          {Professor Sumit Ganguly}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Tutored four students in Fundamentals of Computing, a beginner level course on C.
-                   \item Aided the instructor in understanding the difficulties faced by students by acting as a link
-                       student between the students and instructor.
-               \end{itemize}
-          }
+\skill
+    {2013 -- 2014}
+    {Academic Mentor, Fundamentals of Computing under Professor Sumit Ganguly}
 
-\iproject {2014 -- 2015}
-          {Social Initiative, Antaragni '14}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Organized a blood donation camp for the residents of IIT Kanpur to promote awarness
-                       about road accidents.  Mobilized information about road safety through infographics and questionnaires
-                       via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
-                   \item Organized a Respect March on the 15$^{th}$ of August, to infuse a sense of patriotism
-                       on the occassion of Indian Independence day.
-               \end{itemize}
-          }
 
 \end{document}
