--- a/cv.tex
+++ b/cv.tex
@@ -183,7 +183,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabular}{>{\raggedleft}p{1.5cm}p{15.5cm}r}
+\begin{tabular}{>{\raggedleft}p{1.5cm}p{16.3cm}r}
 
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},
                        \textbf{Indian Institute of Technology}, Kanpur
@@ -218,11 +218,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                  \textbf{Apache Storm}, \textbf{Microsoft Dryad}, and \textbf{Microsoft DryadLINQ}
                  to understand the design decisions involved.
              \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline
-                 processing of messages in CScale to preserve processing order of partially ordered messages.
-             \item Performed \textbf{performance testing} of the concurrency optimizations in real world
-                 scenarios leading to a gain in processing time.
-             \item Performed \textbf{failure testing} of the existing infrastructure and debugged detrimental
-                 replication errors in the existing infrastructure.
+                 processing of messages in CScale to preserve processing order of partially ordered messages.  
+                 Performed \textbf{performance testing}, \textbf{failure testing} of the existing infrastructure.
          \end{itemize}
      }
 
@@ -238,40 +235,28 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                 to a uniform cross-platform viewing experience.
             \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework,
                 for conversations during live lectures.
-            \item Engineered an extensible Jabber framework for real-time communications between different services.
         \end{itemize}
     }
 
 %----------------------------------------------------------------------------------------
-%	SCHOLARSHIPS AND CONFERENCES
-%----------------------------------------------------------------------------------------
-\section{Scholarships and Conferences}
-
-\itemlist {
-    \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
-    \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
-}
-
-%----------------------------------------------------------------------------------------
 %   SCHOLASTIC ACHIEVEMENTS
 %----------------------------------------------------------------------------------------
-\section{Scholastic Achievements}
+\section{Scholastic Achievements, Scholarships and Conferences}
 
 \itemlist {
-    \textsc{2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                            \textbf{Computer, Internet and Network Security};
-                            \textbf{Computer Networks};
-                            \textbf{Computer Organization};
-                            \textbf{Logic for Computer Science};
-                            \textbf{Fundamentals of Computing};
-                            \textbf{Introduction to Philosophy} \\
-    \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
-    \textsc{2009, 2005}  & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
-    \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
-                            2$^{nd}$ to 12$^{th}$ grade. \\
+    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
+                                    \textbf{Systems and Network Security};
+                                    \textbf{Computer Networks};
+                                    \textbf{Computer Organization};
+                                    \textbf{Logic for Computer Science};
+                                    \textbf{Fundamentals of Computing};
+                                    \textbf{Introduction to Philosophy} \\
+    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
+    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
+    \textsc{\small Dec 2009}    & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
 }
 
 %----------------------------------------------------------------------------------------
@@ -280,12 +265,12 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 \section{Skill Set}
 
 \itemlist {
-    \textsc{Languages} %
+    \textsc{\small Languages} %
             & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
               \textbf{C\#} (Efficient), \textbf{C} (Proficient)\\
-    \textsc{Web Dev} %
+    \textsc{\small Web Dev} %
             & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
-    \textsc{Tools} %
+    \textsc{\small Tools} %
             & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Prezi} (Proficient),
               \textbf{Vim} (Expert), \textbf{LaTeX} (Proficient)\\
 }
@@ -310,16 +295,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
       \end{itemize}
     }
 
-\scproject
-    {Winter 2013-2014}
-    {JavaScript to MIPS Compiler}
-    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/javascript-compiler} { \footnotesize{[Repository]}} }
-    {
-          Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-          functions, anonymous functions, static types, type annotations, recursion and nested functions.
-    }
-
 \cproject
     {Winter 2013-2014}
     {Hindi author attribution}
@@ -329,7 +304,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
      \begin{itemize}[leftmargin=0.5cm]
          \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
              Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-         \item Selected as one of the top seven projects at the end of the term.
          \item Generated a Hindi literature corpus consisting of works by Rabindranath Tagore,
              Vibhuti Narayan, Premchand, Sarat Chandra Chattopadhyay and Dhamarvir Bharati.
          \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
@@ -340,6 +314,16 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
              collocations; there was no appreciable difference in the results with the F-scores increasing only
              marginally.
      \end{itemize}
+    }
+
+\scproject
+    {Winter 2013-2014}
+    {JavaScript to MIPS Compiler}
+    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
+    { \href{https://github.com/srijanshetty/javascript-compiler} { \footnotesize{[Repository]}} }
+    {
+          Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+          functions, anonymous functions, static types, type annotations, recursion and nested functions.
     }
 
 \cproject
@@ -492,8 +476,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                \begin{itemize}[leftmargin=0.5cm]
                     \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
                     \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other non-monetary incentives to the outstanding cultural performers in Antaragni under the banner of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over thousand volunteers.
-                    \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
+                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over thousand volunteers.  Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
+                   \item Organized a blood donation camp for the residents of IIT Kanpur to promote awarness
+                       about road accidents.  Mobilized information about road safety through infographics and questionnaires
+                       via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
                \end{itemize}
           }
 
@@ -511,9 +497,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
                    \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
-                   \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
+                       Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
           }
 
@@ -522,9 +507,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \skill {2012 -- 2013}
        {Senator, Students' Senate, IITK Y11 batch.}
-
-\skill {2010 -- 2011}
-       {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
@@ -551,32 +533,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Worked as a English tutor in the pilot English Proficiency Programme to help
-                       under-privileged students obtain a functional knowlege of English; and helped in the
-                       conduction of second phase of the project aimed at school teachers in nearby schools.
+                       under-privileged students obtain a functional knowlege of English.
                \end{itemize}
           }
 
-\lproject {2012 -- 2013}
-          {Academic Mentor, Fundamentals of Computing}
-          {Professor Sumit Ganguly}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Tutored four students in Fundamentals of Computing, a beginner level course on C.
-                   \item Aided the instructor in understanding the difficulties faced by students by acting as a link
-                       student between the students and instructor.
-               \end{itemize}
-          }
-
-\iproject {2014 -- 2015}
-          {Social Initiative, Antaragni '14}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Organized a blood donation camp for the residents of IIT Kanpur to promote awarness
-                       about road accidents.  Mobilized information about road safety through infographics and questionnaires
-                       via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
-                   \item Organized a Respect March on the 15$^{th}$ of August, to infuse a sense of patriotism
-                       on the occassion of Indian Independence day.
-               \end{itemize}
-          }
+\skill {2012 -- 2013}
+       {Academic Mentor, Fundamentals of Computing, Professor Sumit Ganguly}
 
 \end{document}
