--- a/cv.tex
+++ b/cv.tex
@@ -1,41 +1,41 @@
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+\documentclass[a4paper]{article} % Default font size and paper size
 
-\documentclass[a4paper,10pt]{article} % Default font size and paper size
-
+%----------------------------------------------------------------------------------------
+% STYLING
+%----------------------------------------------------------------------------------------
+% FONTS
 \usepackage{fontspec} % For loading fonts
 \defaultfontfeatures{Mapping=tex-text}
 \setmainfont[SmallCapsFont = Fontin SmallCaps]{Fontin} % Main document font
 
+% HEADERS
 \usepackage{xunicode,xltxtra,url,parskip} % Formatting packages
-
 \usepackage{scrpage2} % Provides headers and footers configuration
 
-\usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colours
-
+% HYPERREFS
 \usepackage{hyperref} % Required for adding links	and customizing them
+\usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colours
 \definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link colour
 \hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour} % Set link colours throughout the document
 
+% TABLES
 \usepackage{tabularx,colortbl} % Advanced table configurations
 \usepackage{array} % Custom arrangement for the columns
 \usepackage{multirow} %rows spanning multiple rows
 
+% SECTIONS
 \usepackage{titlesec} % Used to customize the \section command
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule] % Text formatting of sections
-
 \titlespacing{\section}{0pt}{3pt}{3pt} % Spacing around sections
 
+% LISTS
 \usepackage{enumitem} % For left margin removal in itemize
 
+% SYMBOLS
 \usepackage{marvosym} % Allows the use of symbols
 
-%----------------------------------------------------------------------------------------
 % PAGE GEOMETRY
-%----------------------------------------------------------------------------------------
-
-\usepackage[top=0.3cm, bottom=0.3cm, lmargin=0.4cm, rmargin=1.0cm]{geometry} % The page Geometry
+\usepackage[top=0.3cm, bottom=0.3cm, lmargin=0.4cm, rmargin=1.2cm,ignoreheadfoot]{geometry} % The page Geometry
 
 %----------------------------------------------------------------------------------------
 % CUSTOM ENVIRONMENTS
@@ -58,67 +58,32 @@
     \vspace{-0.1cm}
 }
 
-\newcommand{\lproject}[4]{
-    \begin{tabular}{p{0.80\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{4cm}}{\raggedleft \textsc{#1}}\\
-        #3
-    \end{tabular}
-    \begin{tabular}{p{\linewidth}}
-    \vspace{-0.3cm}
-        \footnotesize{#4}
-    \end{tabular}
-    \vspace{-0.5cm}
-}
-
 \newcommand{\cproject}[5]{
     \begin{tabular}{p{0.80\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{4cm}}{\raggedleft \textsc{#1}}\\
-        #3 & #4
+        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{4cm}}{\raggedleft \small {\textsc{#1}}}\\
+        \small {#3} & \small {#4}
     \end{tabular}
     \begin{tabular}{p{\linewidth}}
     \vspace{-0.3cm}
-        \footnotesize{#5}
+        \footnotesize {#5}
     \end{tabular}
     \vspace{-0.5cm}
-}
-
-\newcommand{\scproject}[5]{
-    \begin{tabular}{p{0.80\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{4cm}}{\raggedleft \textsc{#1}}\\
-        #3 & #4
-    \end{tabular}
-    \begin{tabular}{p{\linewidth}}
-    \vspace{-0.3cm}
-        \footnotesize{#5}
-    \end{tabular}
-    \vspace{-0.3cm}
 }
 
 \newcommand{\iproject}[3]{
     \begin{tabular}{p{0.85\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{#1}}\\
+        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{3cm}}{\raggedleft \small {\textsc{#1}}}\\
     \end{tabular}
     \begin{tabular}{p{\linewidth}}
     \vspace{-0.3cm}
         \footnotesize{#3}
     \end{tabular}
-    \vspace{-0.5cm}
-}
-
-\newcommand{\siproject}[3]{
-    \begin{tabular}{p{0.85\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{#1}}\\
-    \end{tabular}
-    \begin{tabular}{p{\linewidth}}
-    \vspace{-0.3cm}
-        \footnotesize{#3}
-    \end{tabular}
-    \vspace{-0.3cm}
+    \vspace{-0.6cm}
 }
 
 \newcommand{\projectlist}[2]{
     \begin{tabular}{p{\linewidth}}
-        \textcolor{NavyBlue}{#1}\\
+        \textcolor{NavyBlue}{\small #1}\\
         \vspace{-0.3cm}
         \footnotesize{#2}
     \end{tabular}
@@ -133,7 +98,7 @@
 
 \newcommand{\skill}[2]{
     \begin{tabular}{p{0.85\linewidth}r}
-        #2 & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{#1}}\\
+        \small {#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{\small #1}}\\
     \end{tabular}
     \vspace{-0.5cm}
 }
@@ -176,7 +141,7 @@
 %----------------------------------------------------------------------------------------
 \section{Interests}
 
-Programming Languages, Networks and Systems, Security, Web-Development, Natural Language Processing
+\small {Programming Languages, Networks and Systems, Security, Web-Development, Natural Language Processing}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -190,11 +155,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                      &   9.5/10.0\\
 
     \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board,
-                         \normalsize\textbf{The Emerald Heights International School}, Indore
+                         \textbf{The Emerald Heights International School}, Indore
                        &   91.4\% \\
 
     \textsc{July 2011} & 10$^{th}$ Board, \textsc{ICSE} Board,
-                         \normalsize\textbf{The Laurels School International}, Indore
+                         \textbf{The Laurels School International}, Indore
                        &   95.4\% \\
 
 \end{tabular}
@@ -205,7 +170,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \section{Work Experience}
 
-\cproject%
+\cproject
       {May-July 2014}
       {Research Intern}
       {\textsc{Microsoft Research India}, Bangalore}
@@ -218,7 +183,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                  \textbf{Apache Storm}, \textbf{Microsoft Dryad}, and \textbf{Microsoft DryadLINQ}
                  to understand the design decisions involved.
              \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to implement concurrent pipeline
-                 processing of messages in CScale to preserve processing order of partially ordered messages.  
+                 processing of messages in CScale to preserve processing order of partially ordered messages.
                  Performed \textbf{performance testing}, \textbf{failure testing} of the existing infrastructure.
          \end{itemize}
      }
@@ -286,7 +251,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     {Monsoon 2014-2015}
     {Multi Factor Authentication in OpenVPN}
     {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
-    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA}{ \footnotesize{[Project Wiki]}} }
+    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Project Wiki]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
           \item One of the eleven projects to be selected as a part of Mozilla's Winter of Security Initiative 2014.
@@ -299,7 +264,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     {Winter 2013-2014}
     {Hindi author attribution}
     {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
-    { \href{https://github.com/srijanshetty/author-attribution}{ \footnotesize{[Repository]}} }
+    { \href{https://github.com/srijanshetty/author-attribution} {[Repository]} }
     {
      \begin{itemize}[leftmargin=0.5cm]
          \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
@@ -316,21 +281,23 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
      \end{itemize}
     }
 
-\scproject
+\cproject
     {Winter 2013-2014}
     {JavaScript to MIPS Compiler}
     {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/javascript-compiler} { \footnotesize{[Repository]}} }
+    { \href{https://github.com/srijanshetty/javascript-compiler} {[Repository]} }
     {
-          Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+        \begin{itemize}[leftmargin=0.5cm]
+          \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
           functions, anonymous functions, static types, type annotations, recursion and nested functions.
+        \end{itemize}
     }
 
 \cproject
     {Monsoon 2013-2014}
     {P2P File Sharing and Streaming and IP Spoofing}
     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    { \href{https://github.com/srijanshetty/nodesock}{ \footnotesize{[Repository]} } }
+    { \href{https://github.com/srijanshetty/nodesock} {[Repository]} }
     {
         \begin{itemize}[leftmargin=0.5cm]
             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
@@ -375,7 +342,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     {Winter 2012-2013}
     {8-bit General Purpose Computer on a FPGA}
     {\textsc{Computer Organization}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/220\_y11} {\footnotesize{[Repository]}} }
+    { \href{https://github.com/srijanshetty/220\_y11} {[Repository]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
           \item Designed and programmed a simple Instruction set Architecture (ISA) for a 8-bit General Purpose Computer with a load-store
@@ -384,14 +351,16 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
       \end{itemize}
     }
 
-\scproject
+\cproject
     {Winter 2012-2013}
     {Conference Dates Web Crawler}
     {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} {\footnotesize{ [Repository]}} }
+    {\href{https://github.com/srijanshetty/crawler} { [Repository] } }
     {
-           Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
+      \begin{itemize}[leftmargin=0.5cm]
+           \item Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
            urllib.
+      \end{itemize}
     }
 
 %----------------------------------------------------------------------------------------
@@ -399,29 +368,46 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 %----------------------------------------------------------------------------------------
 \section{Independent Projects}
 
-\siproject
-    {\href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{[Documentation]} }
+\iproject
+    {\href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{\small [Documentation]} }
     {GNU/Linux Exploration, Programming Club, IIT Kanpur}
     {
-        Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-      process management, memory management, shell interface etc to serve as a reference for the
-      Student Community.
+      \begin{itemize}[leftmargin=0.5cm]
+            \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
+              process management, memory management, shell interface etc to serve as a reference for the
+              Student Community.
+      \end{itemize}
     }
 
-\siproject
-    {\href{https://navya.github.io/oars}{[Website]}}
+\iproject
+    {\href{https://navya.github.io/oars}{\small [Website]}}
     {OARS}
-    { Scraped the institute academic records to create a database of all courses offered by the institute to create an AngularJS based course search over the existing legacy course search.  }
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Scraped the institute academic records to create a database of all courses offered by the
+                institute to create an AngularJS based course search over the existing legacy course search.
+        \end{itemize}
+    }
 
-\siproject
-    {\href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}}
+\iproject
+    {\href{https://github.com/srijanshetty/ShuffleRun} {\small [Repository]}}
     {ShuffleRun}
-    { Pitched ShuffleRun, a music player which selects tracks on the basis of the user's running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}. }
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Pitched ShuffleRun, a music player which selects tracks on the basis of the user's running speed;
+                recieved honourable mention at \textbf{Yahoo! HackU 2013}.
+        \end{itemize}
+    }
 
-\siproject
-    {\href{http://gyph2.herokuapp.com/} {[Website]}}
+\iproject
+    {\href{http://gyph2.herokuapp.com/} {\small [Website]}}
     {Get Your Personal Homepage (GYPH)}
-    {Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website editor. }
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a
+                WYSIWG website editor.
+        \end{itemize}
+    }
 
 \projectlist
     {Projects on Github}
@@ -474,9 +460,15 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Head, Major Events and Competitions, Antaragni '14}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai, Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
-                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships, and other non-monetary incentives to the outstanding cultural performers in Antaragni under the banner of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over thousand volunteers.  Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
+                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
+                        prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
+                        Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
+                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships,
+                        and other non-monetary incentives to the outstanding cultural performers in Antaragni
+                        under the banner of \textbf{Dream On} campaign.
+                    \item Coordinated the conduction of fifty competitions and nine major events with a team
+                        comprising of over thousand volunteers.  Initiated and organized Mr. \& Ms. Fresher's
+                        competition and introduced Chreo Night in Antaragni's arsenal of competitions.
                    \item Organized a blood donation camp for the residents of IIT Kanpur to promote awarness
                        about road accidents.  Mobilized information about road safety through infographics and questionnaires
                        via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
@@ -487,8 +479,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Hospitality Coordinator, Antaragni '13}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Chalked out the logistics of hospitality and accommodation of \textbf{1500 participants} with four other coordinators.
-                   \item Managed a team of 40 secretaries and 80 volunteers, over a span of 8 months and ensured a flawless conduction of the festival.
+                   \item Chalked out the logistics of hospitality and accommodation of \textbf{1500 participants}
+                       with four other coordinators.
+                   \item Managed a team of 40 secretaries and 80 volunteers, over a span of 8 months and ensured a
+                       flawless conduction of the festival.
                    \item Handled security arrangements during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
                \end{itemize}
           }
@@ -527,9 +521,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                \end{itemize}
           }
 
-\lproject {2013 -- 2014}
+\cproject {2013 -- 2014}
           {Tutor, English Proficiency Programme}
           {Professor Bhaskar Das Gupta}
+          {}
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Worked as a English tutor in the pilot English Proficiency Programme to help
