Interchanged email and mobile in the header

--- a/cv.tex
+++ b/cv.tex
@@ -122,7 +122,7 @@
 %----------------------------------------------------------------------------------------
 
 {
-    \begin{tabular}{rp{4.5cm}l}
+    \begin{tabular}{rp{5cm}l}
         \multirow{3}{0.55\linewidth}{
             {
                 \addfontfeature{LetterSpace=20.0}\fontsize{24}{24}\selectfont\scshape
@@ -131,8 +131,9 @@
             \hspace{0.15cm} \emph{Department of Computer Science and Engineering}
         }
 
-        & {\Large\Mobilefone} \footnotesize{+(91) 9005900383} & {\Large\Letter} \footnotesize{\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
-        & {\github} \footnotesize{\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}\\
+        & {\Large\Letter} \footnotesize {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}
+        & {\Large\Mobilefone} \footnotesize {+(91) 9005900383}\\
+        & {\github} \footnotesize {\href{https://github.com/srijanshetty}{https://github.com/srijanshetty}}\\
     \end{tabular}
 }
 
